refactor: code quality improvements and deprecated API updates
- Update Jackson API usage from fields() to properties().iterator()
- Remove unused methods (ResponseStandardizer.addDataSizeMetadata)
- Improve resource management with try-with-resources in RestClientConfig
- Fix code formatting and whitespace issues across services
- Adjust Vite test coverage thresholds to 80% baseline
- Add coverage exclusions for unused/future components

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>